--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ license-files = ["LICEN[CS]E*"]
 Homepage = "https://github.com/gogela/abuseipdb_mcp"
 Issues = "https://github.com/gogela/abuseipdb_mcp/issues"
 
-
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project.scripts]
+abuseipdb_mcp = "abuseipdb_mcp.__main__:main"
