--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ Homepage = "https://github.com/gogela/abuseipdb_mcp"
 Issues = "https://github.com/gogela/abuseipdb_mcp/issues"
 
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling >= 1.26"]
+build-backend = "hatchling.build"
 
 [project.scripts]
 abuseipdb_mcp = "abuseipdb_mcp.__main__:main"
